--- a/random_equation_generator.html
+++ b/random_equation_generator.html
@@ -11,38 +11,50 @@
                 return Math.floor(randomFloat);
             }
 
+            // Cool little thing that lets me check for decimals
+            function decimalCheck(num){
+                if (num == Math.floor(num)) {
+                    return false
+                } else {
+                    return true
+                }
+            }
+
             function main(){
                 
                 // Initialization
                 var operatorInt = 0
                 var number1 = 0
                 var number2 = 0
-                var answer = 0
+                var answer = 0.01
                 
                 var operator = ''
                 var question = ''
 
-                //Generates all required random numbers
-                var operatorInt = generateRandomInteger(1,5);
-                var number1 = generateRandomInteger(1,13);
-                var number2 = generateRandomInteger(1,13);
+                //If the answer contains a decimal a new question is generated
+                while (decimalCheck(answer) == true){
+                    //Generates all required random numbers
+                    var operatorInt = generateRandomInteger(1,5);
+                    var number1 = generateRandomInteger(1,13);
+                    var number2 = generateRandomInteger(1,13);
 
-                // Take the randomly generated 'operatorInt' and use it to assign an operator.
-                if (operatorInt == 1){
-                    operator = '+'
-                    answer = number1 + number2;
-                }
-                else if (operatorInt == 2){
-                    operator = '-'
-                    answer = number1 - number2;
-                }
-                else if (operatorInt == 3){
-                    operator = '*'
-                    answer = number1 * number2;
-                }
-                else if (operatorInt == 4){
-                    operator = '/'
-                    answer = number1 / number2;
+                    // Take the randomly generated 'operatorInt' and use it to assign an operator.
+                    if (operatorInt == 1){
+                        operator = '+'
+                        answer = number1 + number2;
+                    }
+                    else if (operatorInt == 2){
+                        operator = '-'
+                        answer = number1 - number2;
+                    }
+                    else if (operatorInt == 3){
+                        operator = '*'
+                        answer = number1 * number2;
+                    }
+                    else if (operatorInt == 4){
+                        operator = '/'
+                        answer = number1 / number2;
+                    }
                 }
 
                 var question = 'Question: ' + number1 + ' ' + operator + ' ' + number2 + ' = ?'
