--- a/random_equation_generator.html
+++ b/random_equation_generator.html
@@ -73,6 +73,11 @@
                 }
             }
 
+            async function countdownTimer(duration){
+                await sleep(duration);
+                return true;
+            }
+
             function sleep(ms) {
                 return new Promise(resolve => setTimeout(resolve, ms));
             }
