--- a/random_equation_generator.html
+++ b/random_equation_generator.html
@@ -25,7 +25,7 @@
             function answerSkew(answer, answerSkewInt, answerSkewOperatorInt){
                 var displayAnswer = -0.01;
                 displayAnswer = answer + answerSkewInt;
-                return displayAnswer
+                return displayAnswer;
             }
 
             async function answerCheck(userchoice, coinflip, score, timeUp){
@@ -74,7 +74,7 @@
                 }
                 console.log("Time is up countdownTimer()");
                 window.timeIsUp = true;
-                console.log(window.timeIsUp)
+                console.log(window.timeIsUp);
                 answerCheck(true, 1, 0, true);
             }
 
@@ -100,7 +100,7 @@
                 var operator = '';
                 var question = '';
 
-                window.killTimer = false
+                window.killTimer = false;
 
                 document.getElementById("userAnswer").innerHTML = ' ';
 
@@ -112,8 +112,8 @@
                     var number2 = generateRandomInteger(1,13);
                     var coinflip = generateRandomInteger(1,3);
 
-                    var answerSkewInt = generateRandomInteger(1,13)
-                    var answerSkewOperatorInt = generateRandomInteger(1,5)
+                    var answerSkewInt = generateRandomInteger(1,13);
+                    var answerSkewOperatorInt = generateRandomInteger(1,5);
 
                     // Take the randomly generated 'operatorInt' and use it to assign an operator.
                     if (operatorInt == 1){
@@ -180,7 +180,7 @@
                 document.getElementById("operatorInt").innerHTML = 'Operator Int: ' + operatorInt;
 
                 // IMPLEMENT DIFFICULTY
-                countdownTimer(10)
+                countdownTimer(10);
 
             }
         </script>
