pulling window url

--- a/random_equation_generator.html
+++ b/random_equation_generator.html
@@ -177,6 +177,7 @@
                 document.getElementById("coinflip").innerHTML = 'Coinflip: ' + coinflip;
                 document.getElementById("operatorInt").innerHTML = 'Operator Int: ' + operatorInt;
 
+                document.getElementById("demo").innerHTML = "The full URL of this page is:<br>" + window.location.href;
                 // IMPLEMENT DIFFICULTY
                 countdownTimer(10);
 
@@ -198,6 +199,7 @@
         <p id="answer"></p>
         <p id="coinflip"></p>
         <p id="operatorInt"></p>
+        <p id="demo"></p>
         </center>
     </body>
 </html>
