--- a/Math-Mania-HTML/random_equation_generator.html
+++ b/Math-Mania-HTML/random_equation_generator.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css"
         <script type="text/javascript">
             window.killTimer = false;
             window.timeIsUp = false;
