--- a/Math-Mania-HTML/random_equation_generator.html
+++ b/Math-Mania-HTML/random_equation_generator.html
@@ -1,7 +1,8 @@
 <!Doctype html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="">
         <script type="text/javascript">
             window.killTimer = false;
             window.timeIsUp = false;
@@ -179,8 +180,16 @@
                 document.getElementById("operatorInt").innerHTML = 'Operator Int: ' + operatorInt;
 
                 document.getElementById("demo").innerHTML = "The full URL of this page is:<br>" + window.location.href;
+
                 // IMPLEMENT DIFFICULTY
-                countdownTimer(10);
+                if (currentLevel == 0){
+
+                }else if (currentLevel == 1){
+                    countdownTimer(10);
+                }else if (currentLevel == 2){
+                    countdownTimer(10);
+                }
+                    
 
             }
         </script>
