Added sounds, level selection, a homepage and fixed logic

--- a/Math-Mania-HTML/Pages/Home.html
+++ b/Math-Mania-HTML/Pages/Home.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
+    <div class="App">
+        <div class="mathManiaPadding">
+            <img src="MathMania.png" width="100%" />
+        </div>
+        <div class="mathManiaButtonPadding">
+            <div class="card">
+                <a href="SelectLevel.html">
+                    <img src="./rocket.png" width="90%" />
+                </a>
+            </div>
+            </a>
+        </div>
+        <div class="App pressStart">
+            <h3 class="startToPress">PRESS TO START!</h3>
+        </div>
+    </div>
 </body>
+
 </html>
